--- a/css/less/content.less
+++ b/css/less/content.less
@@ -358,6 +358,9 @@
         width: calc(100% - 30rem);
         max-width: 84rem;
     }
+    .main-actions-wrap, .main-buttons-wrap {
+        justify-content: flex-start;
+    }
     .title-wrap {
         margin-bottom: 5rem;
     }
@@ -857,6 +860,9 @@
             padding: 0;
             margin-bottom: 4rem;
             max-width: inherit;
+        }
+        .main-actions-wrap, .main-buttons-wrap {
+            justify-content: center;
         }
     }
     .tiles-payments-box {
